--- a/contact-us.html
+++ b/contact-us.html
@@ -16,8 +16,9 @@
     <link rel="stylesheet" href="assets/css/super-classes.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/mobile.css" />
-    <link rel="icon" href="./assets/image/core-img/logo2.png" />
-    <title>MarkAB Capital | Family Office</title>
+
+    <link rel="icon" href="/assets/image/bg-img/19.jpeg" />
+    <title>Markab Capital | Contact Us</title>
 
     <style>
       .sub-banner {
@@ -27,8 +28,7 @@
             rgba(0, 0, 0, 0.65),
             rgba(0, 0, 0, 0.65)
           ),
-          url(assets/image/bg-img/34.jpg) no-repeat center;
-        background-size: cover;
+          url(assets/image/bg-img/23.jpg) no-repeat center;
       }
     </style>
   </head>
@@ -74,7 +74,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle p-0 is-active"
+                  class="nav-link dropdown-toggle p-0"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -98,7 +98,9 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-0" href="contact-us.html">Contact Us</a>
+                <a class="nav-link p-0 is-active" href="contact.html"
+                  >Contact Us</a
+                >
               </li>
             </ul>
           </div>
@@ -106,7 +108,7 @@
       </div>
     </header>
     <!--navbar-sec-->
-    <!--banner-sec-->
+
     <section class="sub-banner w-100 float-left shape-left shape-right d-table">
       <div class="d-table-cell align-middle">
         <div class="container">
@@ -116,14 +118,9 @@
               data-aos="fade-down"
               data-aos-duration="700"
             >
-              Family Office
+              Contact Us
             </h1>
-            <p>
-              We believe that true prosperity is reflected in what we are able
-              <br />
-
-              to pass on to our families and our children.
-            </p>
+            <br /><br />
             <div
               class="banner-button d-inline-block"
               data-aos="fade-up"
@@ -131,9 +128,7 @@
             >
               <a class="d-inline-block" href="index.html">Home</a>
               <span>-</span>
-              <a class="d-inline-block" href="family-office.html"
-                >Family Office</a
-              >
+              <a class="d-inline-block" href="contact-us.html">Contact</a>
             </div>
           </div>
         </div>
@@ -142,116 +137,144 @@
         <a id="button" href="#" class="show"></a>
       </div>
     </section>
-    <!--banner-sec-->
-    <!--detail-sec-->
-    <section
-      class="service-detail business-growth w-100 float-left"
-      data-aos="fade-up"
-      data-aos-duration="700"
-    >
-      <div class="container">
-        <div class="service-detail-sec">
-          <div>
-            <h2>Family Office</h2>
-          </div>
-          <div class="service-img">
-            <figure>
-              <img
-                src="assets/image/bg-img/3.jpg"
-                alt="service-detail-design-img"
-              />
-            </figure>
-          </div>
-          <div class="service-detail-text">
-            <p>
-              We believe that true prosperity is reflected in what we are able
-              to pass on to our families and our children. Everything we do at
-              Markab – for our clients’ families and our own – is driven by this
-              principle.
-            </p>
-            <p>
-              We strive to give our clients the peace of mind that comes with a
-              trusted partner, working alongside you and your loved ones, to
-              ensure that your wealth is carefully looked after for generations
-              to come. We are dedicated to contributing to our clients’ future
-              aspirations through the Markab Multi-family office platform.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--detail-sec-->
-    <!--overview-sec-->
-    <div
-      class="overview-sec w-100 float-left"
-      data-aos="fade-up"
-      data-aos-duration="700"
-    >
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-md-6">
-            <div class="overview-left-sec">
-              <h3>Our Goal</h3>
 
-              <p>
-                <br />
-                Our primary goal is to provide a sense of security and peace of
-                mind to our clients by becoming their trusted partners. Working
-                alongside you and your loved ones, we ensure your wealth is
-                meticulously managed and preserved for the coming generations.
-                With our multi-family office platform, we collaborate to curate
-                financial strategies that not only address your present
-                financial needs but also embrace the enduring aspirations of
-                your family.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6">
-            <div class="service-sec-image">
-              <figure class="mb-0">
-                <img src="assets/image/bg-img/6.jpg" alt="business-growth" />
-              </figure>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!--overview-sec-->
-    <!--benefits-sec-->
+    <!--form-sec-->
     <div
-      class="benefits-main-sec w-100 float-left"
-      data-aos="fade-up"
-      data-aos-duration="700"
+      class="form-section w-100 float-left padding-top padding-bottom position-relative"
     >
       <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-md-6">
-            <div class="business-left-sec">
-              <figure class="mb-0">
-                <img src="assets/image/bg-img/7.jpg" alt="marketing-advice" />
-              </figure>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6">
-            <div class="benefits-sec">
-              <p>
+        <div class="row justify-content-center">
+          <div class="col-md-12">
+            <div class="row justify-content-center">
+              <div class="col-md-6">
+                <h3 class="heading mb-4">Let's talk about everything!</h3>
+                <p>Contact Us, Strictly By Appointment Only</p>
                 <br />
-                At Markab Capital, we are dedicated to contributing to our
-                clients’ future aspirations. Our commitment extends beyond the
-                immediate and focuses on long-term vision and sustainability.
-                Through our multi-family office platform, we seek to be a
-                guiding force in realizing and fostering the dreams and
-                ambitions you hold for your family’s future. Our dedication is
-                rooted in ensuring that your legacy remains an enduring
-                testament to the values and successes you wish to impart.
-              </p>
+                <br />
+                <p>
+                  <img
+                    src="assets/image/bg-img/undraw-contact.svg"
+                    alt="Image"
+                    class="img-fluid"
+                  />
+                </p>
+              </div>
+              <div class="col-md-6">
+                <p
+                  style="font-size: 20px"
+                  class="wow fadeInUp"
+                  data-wow-delay="300ms"
+                >
+                  <i class="fa fa-phone" style="color: #ce5a67"></i> KUWAIT:
+                  +965 2220-7048
+                </p>
+                <p
+                  style="font-size: 20px"
+                  class="wow fadeInUp"
+                  data-wow-delay="400ms"
+                >
+                  <i class="fa fa-phone" style="color: #ce5a67"></i>
+                  UK: +44 (0)20-3868-6144
+                </p>
+                <br />
+
+                <form
+                  class="mb-5"
+                  method="post"
+                  action="send-email.php"
+                  id="contactForm"
+                  name="contactForm"
+                >
+                  <div class="row">
+                    <div class="col-md-6 form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="fname"
+                        id="fname"
+                        placeholder="Your first name"
+                      />
+                    </div>
+                    <div class="col-md-6 form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="lname"
+                        id="lname"
+                        placeholder="Your last name"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-12 form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="email"
+                        id="email"
+                        placeholder="Email"
+                      />
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12 form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="mobile"
+                        id="mobile"
+                        placeholder="Your mobile number"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-12 form-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="name"
+                        id="name"
+                        placeholder="Your Country"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-12 form-group">
+                      <textarea
+                        style="width: 100%; height: 200px"
+                        class="form-control"
+                        name="message"
+                        id="message"
+                        placeholder="Write your message"
+                      ></textarea>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12">
+                      <input
+                        type="submit"
+                        value="Send Message"
+                        class="btn btn-primary rounded-0 py-2 px-4"
+                      />
+                      <span class="submitting"></span>
+                    </div>
+                  </div>
+                </form>
+                <br /><br /><br /><br /><br /><br />
+                <!-- <div id="form-message-warning mt-4"></div> 
+              <div id="form-message-success">
+                Your message was sent, thank you!
+              </div> -->
+              </div>
             </div>
           </div>
         </div>
-        <br /><br /><br /><br /><br /><br /><br />
       </div>
     </div>
-    <!--benefits-sec-->
+    <!--form-sec-->
 
     <!--footer-sec-->
     <div
@@ -342,30 +365,6 @@
       AOS.init();
     </script>
     <script>
-      // var btn = $('#button');
-      // $(window).scroll(function () {
-      //    if ($(window).scrollTop() == 0) {
-      //       btn.addClass('show');
-      //    } else {
-      //       btn.removeClass('show');
-      //    }
-      // });
-
-      // var btn2 = $('#bottom-button');
-      // $(window).scroll(function() {
-      // if ($(window).scrollTop() > 300) {
-      // btn.addClass('show2');
-      // } else {
-      // btn.removeClass('show2');
-      // }
-      // });
-
-      // btn2.on('click', function(e) {
-      // e.preventDefault();
-      // $('html, body').animate({scrollTop:0}, '300');
-      // });
-    </script>
-    <script>
       var btn = $("#button");
       $(window).scroll(function () {
         if ($(window).scrollTop() > 300) {
@@ -378,70 +377,6 @@
       btn.on("click", function (e) {
         e.preventDefault();
         $("html, body").animate({ scrollTop: 0 }, "300");
-      });
-    </script>
-    <script>
-      $(document).ready(function () {
-        var counters = $(".count");
-        var countersQuantity = counters.length;
-        var counter = [];
-
-        for (i = 0; i < countersQuantity; i++) {
-          counter[i] = parseInt(counters[i].innerHTML);
-        }
-
-        var count = function (start, value, id) {
-          var localStart = start;
-          setInterval(function () {
-            if (localStart < value) {
-              localStart++;
-              counters[id].innerHTML = localStart;
-            }
-          }, 40);
-        };
-
-        for (j = 0; j < countersQuantity; j++) {
-          count(0, counter[j], j);
-        }
-      });
-
-      $(".count").each(function () {
-        $(this)
-          .prop("Counter", 0)
-          .animate(
-            {
-              Counter: $(this).text(),
-            },
-            {
-              duration: 3300,
-              easing: "swing",
-              step: function (now) {
-                $(this).text(Math.ceil(now));
-              },
-            }
-          );
-      });
-    </script>
-    <script>
-      $(function () {
-        $("#carouselExampleControls").on("slide.bs.carousel", function (e) {
-          let thisDiv = $(this);
-          setTimeout(function () {
-            let activeDiv = thisDiv.find(".carousel-item.active");
-            let activeId = activeDiv.attr("id");
-            let inputVal = activeDiv.find("input").val();
-            console.log(inputVal);
-            let activeSlideImg = $(".clients").find("#slide3 img").attr("src");
-            let replacingImgs = $(".clients .slideImgs");
-            replacingImgs.toArray().forEach((Img) => {
-              let imgSrc = $(Img).find("img").attr("src");
-              if (imgSrc == inputVal) {
-                $(Img).find("img").attr("src", activeSlideImg);
-                $(".clients").find("#slide3 img").attr("src", inputVal);
-              }
-            });
-          }, 900);
-        });
       });
     </script>
   </body>
