--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-0" href="contact-us.php">Contact Us</a>
+                <a class="nav-link p-0" href="contact-us.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -404,7 +404,7 @@
               <br />Strictly by appointment only.
             </p>
             <div class="generic-button">
-              <a class="business-button d-inline-block" href="contact-us.php"
+              <a class="business-button d-inline-block" href="contact-us.html"
                 >Contact Us</a
               >
             </div>
@@ -537,7 +537,9 @@
                   <a class="d-inline-block" href="news.html">News</a>
                 </li>
                 <li class="position-relative">
-                  <a class="d-inline-block" href="contact-us.php">Contact us</a>
+                  <a class="d-inline-block" href="contact-us.html"
+                    >Contact us</a
+                  >
                 </li>
               </ul>
             </div>
