--- a/about-us.html
+++ b/about-us.html
@@ -99,7 +99,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-0" href="contact-us.php">Contact Us</a>
+                <a class="nav-link p-0" href="contact-us.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -598,7 +598,9 @@
                   <a class="d-inline-block" href="news.html">News</a>
                 </li>
                 <li class="position-relative">
-                  <a class="d-inline-block" href="contact-us.php">Contact us</a>
+                  <a class="d-inline-block" href="contact-us.html"
+                    >Contact us</a
+                  >
                 </li>
               </ul>
             </div>
