--- a/private-equity.html
+++ b/private-equity.html
@@ -113,7 +113,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-0" href="contact-us.php">Contact Us</a>
+                <a class="nav-link p-0" href="contact-us.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -291,7 +291,7 @@
                   <a class="d-inline-block" href="news.html">News</a>
                 </li>
                 <li class="position-relative">
-                  <a class="d-inline-block" href="contact-us.php"
+                  <a class="d-inline-block" href="contact-us.html"
                     >Contact us</a
                   >
                 </li>
